Fixed tags table, first column was too wide.

--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -221,7 +221,7 @@ table.resources td, table.tags td {
 }
 
 th.first-item {
-    min-width: 250px;
+    min-width: 150px;
 }
 
 table.resources td.first-item, 
